--- a/web/dashboardRestaurants.html
+++ b/web/dashboardRestaurants.html
@@ -237,7 +237,7 @@
                     <!-- small box -->
                     <div  class="small-box bg-aqua-gradient">
                         <div class="inner">
-                            <h3><number-chart param="name" class="dc-element"></number-chart>
+                            <h3><number-chart param="name" type="param" class="dc-element"></number-chart>
                             </h3>
                             <p>Number of filtered elements</p>
                         </div>
@@ -255,12 +255,12 @@
                 <!-- small box -->
                 <div  class="small-box bg-green-gradient">
                     <div class="inner">
-                        <h3><number-chart param="district" class="dc-element"></number-chart>
+                        <h3><number-chart param="district" type="param" class="dc-element"></number-chart>
                         </h3>
                         <p>Number of districts under selection</p>
                     </div>
                     <div class="icon">
-                        <i class="ion ion-stats-bars"></i>
+                        <i class="ion ion-android-pin"></i>
                     </div>
                     <div class="small-box-footer"></div>
                 </div>
@@ -273,12 +273,12 @@
                     <!-- small box -->
                     <div  class="small-box bg-yellow-gradient">
                         <div class="inner">
-                            <h3><number-chart param="newFoodType" class="dc-element"></number-chart>
+                            <h3><number-chart param="newFoodType" type="param" class="dc-element"></number-chart>
                             </h3>
                             <p>Food types under selection</p>
                         </div>
                         <div class="icon">
-                            <i class="ion ion-stats-bars"></i>
+                            <i class="ion ion-android-restaurant"></i>
                         </div>
                         <div class="small-box-footer"></div>
                     </div>
