--- a/web/dashboardPlaces.html
+++ b/web/dashboardPlaces.html
@@ -81,6 +81,8 @@
     <link rel="import" href="polymer-elements/paper-shadow/paper-shadow.html">
 
     <link rel="import" href="polymer-elements/leaflet-marker-map/leaflet-marker-map.html">
+    <link rel="import" href="polymer-elements/review-widget/review-widget.html">
+
 
     <!-- ------------------------------- end/ POLYMER COMPONENTS IMPORT ZONE ------------------- -->
 
@@ -249,7 +251,6 @@
                         </div>
                         <!-- box-body -->
                         <div class="box-body chart-responsive">
-                            <leaflet-marker-map class="dc-element"></leaflet-marker-map>
                         </div>
                         <!-- /.box-body -->
                     </div>
@@ -403,8 +404,8 @@
                     <!--Widgets must have 'widget' class in order to render their loading screen-->
                     <div class="box box-primary widget">
                         <div class="box-header">
-                            <i class="glyphicon glyphicon-usd"></i>
-                            <h3 class="box-title">Polarity Filter</h3>
+                            <i class="glyphicon glyphicon-tags"></i>
+                            <h3 class="box-title">Categories</h3>
                             <div class="box-tools pull-right">
                                 <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
                                 <button class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
@@ -457,22 +458,21 @@
             <!-- /.row (main row) -->
             <!-- Main row -->
             <div class="row">
-                <div class="col-lg-5" id="reviewElement" style="display: none">
+                <div class="col-lg-5">
                     <!-- row-chart -->
                     <!--Widgets must have 'widget' class in order to render their loading screen-->
                     <div class="box box-primary widget">
                         <div class="box-header">
                             <i class="glyphicon glyphicon-star"></i>
-                            <h3 class="box-title">Rewiews</h3>
+                            <h3 class="box-title">Reviews</h3>
                             <div class="box-tools pull-right">
                                 <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
                                 <button class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
                             </div>
                         </div>
                         <!-- box-body -->
-                        <div class="box-body chart-responsive" style="overflow: hidden">
-                            <div id="reviewsDiv"></div>
-                            <row-chart param="category" class="dc-element"></row-chart>
+                        <div class="box-body chart-responsive">
+                            <review-widget class="dc-element"></review-widget>
                             <div class="clearfix"></div>
                         </div>
                         <!-- /.box-body -->
