--- a/web/dashboardPlaces.html
+++ b/web/dashboardPlaces.html
@@ -251,6 +251,7 @@
                         </div>
                         <!-- box-body -->
                         <div class="box-body chart-responsive">
+                            <leaflet-marker-map class="dc-element"></leaflet-marker-map>
                         </div>
                         <!-- /.box-body -->
                     </div>
