--- a/web/dashboardPlaces.html
+++ b/web/dashboardPlaces.html
@@ -345,7 +345,7 @@
                     <!--Widgets must have 'widget' class in order to render their loading screen-->
                     <div class="box box-primary widget">
                         <div class="box-header">
-                            <i class="fa fa-inbox"></i>
+                            <i class="glyphicon glyphicon-filter"></i>
                             <h3 class="box-title" id="here">Category</h3>
                         </div>
                         <!-- box-body -->
@@ -362,7 +362,7 @@
                     <!--Widgets must have 'widget' class in order to render their loading screen-->
                     <div class="box box-primary widget">
                         <div class="box-header">
-                            <i class="fa fa-inbox"></i>
+                            <i class="glyphicon glyphicon-filter"></i>
                             <h3 class="box-title" id="here">City</h3>
                         </div>
                         <!-- box-body -->
@@ -377,22 +377,43 @@
 
 
                 <div class="col-lg-3 col-xs-6">
-                    <!-- bar-chart -->
+                    <!-- row-chart -->
                     <!--Widgets must have 'widget' class in order to render their loading screen-->
                     <div class="box box-primary widget">
                         <div class="box-header">
-                            <i class="glyphicon glyphicon-usd"></i>
-                            <h3 class="box-title">Polarity Filter</h3>
+                            <i class="glyphicon glyphicon-signal"></i>
+                            <h3 class="box-title">Polarity</h3>
+                            <div class="box-tools pull-right">
+                                <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                                <button class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                            </div>
                         </div>
                         <!-- box-body -->
                         <div class="box-body chart-responsive" style="overflow: hidden">
-                            <bar-chart param="polarity" xMin="0" xMax="10" width=100 xLabel="Polarity" class="dc-element"></bar-chart>
+                            <bar-chart param="polarity" xMin=0 xMax=10 class="dc-element"></bar-chart>
+                            <div class="clearfix"></div>
                         </div>
                         <!-- /.box-body -->
                     </div>
-                    <!-- /.bar-chart -->
+                    <!-- /.row-chart -->
                 </div><!-- ./col -->
 
+                <div class="col-lg-3 col-xs-6">
+                <!-- bubble-chart -->
+                <!--Widgets must have 'widget' class in order to render their loading screen-->
+                <div class="box box-primary widget">
+                    <div class="box-header">
+                        <i class="glyphicon glyphicon-record"></i>
+                        <h3 class="box-title">Bubble chart</h3>
+                    </div>
+                    <!-- box-body -->
+                    <div class="box-body chart-responsive">
+                        <bubble-chart param="polarity" w=  xMax=10 yMax=20000 radius=50000 class="dc-element"></bubble-chart>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+                <!-- /.bubble-chart -->
+                </div><!-- ./col -->
 
             </div>
             <!-- /.row -->
@@ -405,16 +426,16 @@
                     <!--Widgets must have 'widget' class in order to render their loading screen-->
                     <div class="box box-primary widget">
                         <div class="box-header">
-                            <i class="glyphicon glyphicon-tags"></i>
-                            <h3 class="box-title">Categories</h3>
+                            <i class="glyphicon glyphicon-star"></i>
+                            <h3 class="box-title">Reviews</h3>
                             <div class="box-tools pull-right">
                                 <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
                                 <button class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
                             </div>
                         </div>
                         <!-- box-body -->
-                        <div class="box-body chart-responsive" style="overflow: hidden">
-                            <row-chart param="category" class="dc-element"></row-chart>
+                        <div class="box-body chart-responsive">
+                            <review-widget class="dc-element"></review-widget>
                             <div class="clearfix"></div>
                         </div>
                         <!-- /.box-body -->
@@ -460,25 +481,7 @@
             <!-- Main row -->
             <div class="row">
                 <div class="col-lg-5">
-                    <!-- row-chart -->
-                    <!--Widgets must have 'widget' class in order to render their loading screen-->
-                    <div class="box box-primary widget">
-                        <div class="box-header">
-                            <i class="glyphicon glyphicon-star"></i>
-                            <h3 class="box-title">Reviews</h3>
-                            <div class="box-tools pull-right">
-                                <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                                <button class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
-                            </div>
-                        </div>
-                        <!-- box-body -->
-                        <div class="box-body chart-responsive">
-                            <review-widget class="dc-element"></review-widget>
-                            <div class="clearfix"></div>
-                        </div>
-                        <!-- /.box-body -->
-                    </div>
-                    <!-- /.row-chart -->
+
 
                 </div><!-- ./col -->
             </div>
