--- a/web/dashboardPlaces.html
+++ b/web/dashboardPlaces.html
@@ -408,7 +408,7 @@
                     </div>
                     <!-- box-body -->
                     <div class="box-body chart-responsive">
-                        <bubble-chart param="polarity" w=  xMax=10 yMax=20000 radius=50000 class="dc-element"></bubble-chart>
+                        <bubble-chart param="polarity"   xMax=10 yMax=20000 radius=50000 class="dc-element"></bubble-chart>
                     </div>
                     <!-- /.box-body -->
                 </div>
