--- a/web/dashboardRestaurants.html
+++ b/web/dashboardRestaurants.html
@@ -381,7 +381,7 @@
                         </div>
                         <!-- box-body -->
                         <div class="box-body chart-responsive">
-                            <bubble-chart param="newPrice" class="dc-element"></bubble-chart>
+                            <bubble-chart param="newPrice" xMax=100 yMax=160 radius=1000 class="dc-element"></bubble-chart>
                         </div>
                         <!-- /.box-body -->
                     </div>
