--- a/web/polymer-elements/review-widget/review-widget.html
+++ b/web/polymer-elements/review-widget/review-widget.html
@@ -5,6 +5,12 @@
 
 
     <template>
+
+        <style>
+            .number-display {
+                visibility: hidden;
+            }
+        </style>
         <!-- dc style -->
         <link rel="stylesheet" type="text/css" href="dc.css" media="screen"/>
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
