- Acknowledgements added - Collection from Mongodb changed

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -88,7 +88,7 @@
 
     <paper-shadow class="card" z="2"><header class="main-header">
         <!-- Logo -->
-        <a href="dashboard.html" class="logo"><b>Sefarad</b>-2.0</a>
+        <a href="#" class="logo"><b>SmartOpenData</b></a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
             <!-- Sidebar toggle button-->
@@ -374,6 +374,27 @@
         <strong>Powered by <a href="https://github.com/gsi-upm/Sefarad-2.0">Sefarad 2.0</a>
             @<a href="http://www.gsi.dit.upm.es/">Grupo de Sistemas Inteligentes</a></strong>
         - Universidad Politécnica de Madrid.
+        <div id="acknowledgements" style="text-align: center">
+            <hr>
+            <div style="display:inline">
+                    <span style="max-width:200px; word-wrap:break-word;">
+                        <p>This research has been cofunded through the SmartOpenData Project developed under the activity code
+                            ENV.2013.6.5-3:</p>
+                        <p>Exploiting the European Open Data Strategy
+                            to mobilise the use of environmental data and information</p>
+                        <br>
+                    </span>
+                <a href="http://gsi.dit.upm.es/" target="_blank">
+                    <img style="height: 50px; width: 50px;" src="dist/img/logo_gsi.png" alt="GSI-UPM">
+                </a>
+
+                <img src="dist/img/seventh_logo.png" alt="European Union" style="height: 50px; width: 70px;">
+
+                <a href="http://www.smartopendata.eu/">
+                    <img src="dist/img/smartopendata.png" style="height: 50px; width: 55px;" alt="Paradigma Tecnológico">
+                </a>
+            </div>
+        </div>
     </footer>
 </div>
 <!-- ./wrapper -->
