--- a/web/dashboardPlaces.html
+++ b/web/dashboardPlaces.html
@@ -93,7 +93,7 @@
 
     <paper-shadow class="card" z="2"><header class="main-header">
         <!-- Logo -->
-        <a href="dashboard.html" class="logo"><b>Sefarad</b>-2.0</a>
+        <a href="dashboard.html" class="logo"><b>TourPedia</b></a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
             <!-- Sidebar toggle button-->
@@ -496,6 +496,30 @@
         <strong>Powered by <a href="https://github.com/gsi-upm/Sefarad-2.0">Sefarad 2.0</a>
             @<a href="http://www.gsi.dit.upm.es/">Grupo de Sistemas Inteligentes</a></strong>
         - Universidad Politécnica de Madrid.
+        <div id="acknowledgements" style="text-align: center">
+            <hr>
+            <div style="display:inline">
+                    <span style="max-width:200px; word-wrap:break-word;">
+                        <p>These data have been retrieved thanks to the collaboration of project Tourpedia
+                            and the team of people that form</p>
+                        <p>Provide a set of ready to use tools to perform some natural language processing tasks, free
+                            and easy to adapt for Academia, Research and Small and Medium Enterprise to integrate them
+                            in their workflow</p>
+                        <br>
+                    </span>
+                <a href="http://gsi.dit.upm.es/" target="_blank">
+                    <img style="height: 50px; width: 50px;" src="dist/img/logo_gsi.png" alt="GSI-UPM">
+                </a>
+
+                <img src="dist/img/seventh_logo.png" alt="European Union" style="height: 50px; width: 70px;">
+                <a href="http://www.opener-project.eu/">
+                    <img src="dist/img/opener_logo.png" style="height: 50px; width: 155px;" alt="OpeNER">
+                </a>
+                <a href="http://tour-pedia.org/about/">
+                    <img src="dist/img/tourpedia.png" style="height: 50px; width: 175px;" alt="Paradigma Tecnológico">
+                </a>
+            </div>
+        </div>
     </footer>
 </div>
 <!-- ./wrapper -->
