--- a/web/dashboardRestaurants.html
+++ b/web/dashboardRestaurants.html
@@ -87,7 +87,7 @@
 
     <paper-shadow class="card" z="2"><header class="main-header">
         <!-- Logo -->
-        <a href="dashboard.html" class="logo"><b>Sefarad</b>-2.0</a>
+        <a href="dashboard.html" class="logo"><b>Dbpedia</b></a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
             <!-- Sidebar toggle button-->
