--- a/web/dashboardRestaurants.html
+++ b/web/dashboardRestaurants.html
@@ -436,7 +436,7 @@
 <!-- Bootstrap 3.3.2 JS -->
 <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <!-- Dart -->
-<script type="application/dart" src="dashboard.dart"></script>
+<script type="application/dart" src="dashboardRestaurants.dart"></script>
 <script type="text/javascript" src="packages/browser/dart.js"></script>
 <!-- Morris.js charts -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
