--- a/web/dashboardPlaces.html
+++ b/web/dashboardPlaces.html
@@ -263,11 +263,11 @@
                     <!--Number chart is just the number in order to take advantage of adminLTE icons-->
                     <!-- small box -->
                     <div class="info-box bg-aqua">
-                        <span class="info-box-icon"><i class="ion ion-android-restaurant"></i></span>
+                        <span class="info-box-icon"><i class="glyphicon glyphicon-info-sign"></i></span>
                         <div class="info-box-content">
-                            <span class="info-box-text">Restaurants</span>
+                            <span class="info-box-text">Elements selected</span>
                             <span class="info-box-number">
-                                <number-chart param="category" type="value" valueToCount="restaurant" class="dc-element"></number-chart>
+                                <number-chart param="name" type="param"  class="dc-element"></number-chart>
                             </span>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-restaurant" style="width: 50%"></div>
@@ -282,9 +282,9 @@
                     <div class="info-box bg-green">
                         <span class="info-box-icon"><i class="ion ion-android-locate"></i></span>
                         <div class="info-box-content">
-                            <span class="info-box-text">Points of Interest</span>
+                            <span class="info-box-text">Polarities under selection</span>
                             <span class="info-box-number">
-                                <number-chart param="category" type="value" valueToCount="poi" class="dc-element"></number-chart>
+                                <number-chart param="polarity" type="param" class="dc-element"></number-chart>
                             </span>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-poi" style="width: 50%"></div>
