--- a/web/dashboardPlaces.html
+++ b/web/dashboardPlaces.html
@@ -270,10 +270,10 @@
                                 <number-chart param="name" type="param"  class="dc-element"></number-chart>
                             </span>
                             <div class="progress">
-                                <div class="progress-bar progress-bar-restaurant" style="width: 50%"></div>
+                                <div class="progress-bar progress-bar-name" style="width: 50%"></div>
                             </div>
                         <span class="progress-description">
-                            <b class="percent-restaurant">50%</b> of Total Selected </span>
+                            <b class="percent-name">50%</b> of Total Selected </span>
                         </div><!-- /.info-box-content -->
                     </div>
 
@@ -287,10 +287,10 @@
                                 <number-chart param="polarity" type="param" class="dc-element"></number-chart>
                             </span>
                             <div class="progress">
-                                <div class="progress-bar progress-bar-poi" style="width: 50%"></div>
+                                <div class="progress-bar progress-bar-polarity" style="width: 50%"></div>
                             </div>
                             <span class="progress-description">
-                                <b class="percent-poi">50%</b> of Total Selected</span>
+                                <b class="percent-polarity">50%</b> of Total Selected</span>
                         </div><!-- /.info-box-content -->
                     </div>
 
